--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
               ></use>
             </svg>
           </button>
-
-          <div class="menu" id="menu" data-menu>
+        </div>
+        <!-- Мобильное меню -->
+        <div class="menu" id="menu" data-menu>
+          <div class="menu-container">
             <!-- Главная навигация -->
             <nav class="mob-nav">
               <!-- Переход на другие страницы -->
@@ -116,41 +118,43 @@
               </ul>
             </nav>
 
-            <!-- Контакты хедер -->
-            <ul class="mob-contacts list">
-              <li class="mob-contacts__item item">
-                <a
-                  class="mob-contacts__link tel link"
-                  href="tel:+380961111111"
-                >
-                  +38 096 111 11 11
-                </a>
-              </li>
-              <li class="mob-contacts__item item">
-                <a
-                  class="mob-contacts__link mail link"
-                  href="mailto:info@devstudio.com"
-                >
-                  info@devstudio.com
-                </a>
-              </li>
-            </ul>
+            <div>
+              <!-- Контакты хедер -->
+              <ul class="mob-contacts list">
+                <li class="mob-contacts__item item">
+                  <a
+                    class="mob-contacts__link tel link"
+                    href="tel:+380961111111"
+                  >
+                    +38 096 111 11 11
+                  </a>
+                </li>
+                <li class="mob-contacts__item item">
+                  <a
+                    class="mob-contacts__link mail link"
+                    href="mailto:info@devstudio.com"
+                  >
+                    info@devstudio.com
+                  </a>
+                </li>
+              </ul>
 
-            <!-- Социальные сети -->
-            <ul class="mob-social list">
-              <li class="mob-social__item item">
-                <a class="mob-social__link link" href="#">Instagram</a>
-              </li>
-              <li class="mob-social__item item">
-                <a class="mob-social__link link" href="#">Twitter</a>
-              </li>
-              <li class="mob-social__item item">
-                <a class="mob-social__link link" href="#">Facebook</a>
-              </li>
-              <li class="mob-social__item item">
-                <a class="mob-social__link link" href="#">LinkedIn</a>
-              </li>
-            </ul>
+              <!-- Социальные сети -->
+              <ul class="mob-social list">
+                <li class="mob-social__item item">
+                  <a class="mob-social__link link" href="#">Instagram</a>
+                </li>
+                <li class="mob-social__item item">
+                  <a class="mob-social__link link" href="#">Twitter</a>
+                </li>
+                <li class="mob-social__item item">
+                  <a class="mob-social__link link" href="#">Facebook</a>
+                </li>
+                <li class="mob-social__item item">
+                  <a class="mob-social__link link" href="#">LinkedIn</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -643,7 +647,8 @@
               value="accepted"
             />
             <span class="modal__checker"></span>
-            <span>Соглашаюсь с рассылкой и принимаю
+            <span
+              >Соглашаюсь с рассылкой и принимаю
               <a class="modal__link link" href="#">Условия договора</a>
             </span>
           </label>
